--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -24,7 +24,9 @@
    "id": "e68ba1b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"test\")"
+   ]
   }
  ],
  "metadata": {
@@ -43,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
