Added the GRU + LSTM basics and some other parameters that we could use in the future

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -47,6 +47,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8cf81d65-4426-4e94-a02b-df473c38210a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3.1: Additional data that could be used in the furture:\n",
+    "# Momentum = Open price – Close price\n",
+    "# Average price = (Low price + High price) / 2\n",
+    "# Range = High price – Low price\n",
+    "# OHLC price = (Open price + High price + Low price + Close price)/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cea6aad1-dddf-425e-80fe-a1ce2c2a667a",
    "metadata": {},
    "outputs": [],
@@ -148,6 +162,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9b3ead3c-496f-4f17-8cb0-37241914426e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7.1: Possible GRU + LSTM model\n",
+    "# model = Sequential()\n",
+    "# model.add(GRU(units=20, return_sequences=True, input_shape=(X_train.shape[1], X_train.shape[2])))\n",
+    "# model.add(LSTM(units=256, return_sequences=True))\n",
+    "# model.add(Dense(units=64))\n",
+    "# model.add(Dense(units=1))\n",
+    "# model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "# This is based on this paper (https://doi.org/10.1016/j.socl.2020.100009) which used this method for FOREX daytrading\n",
+    "# It resulted in a more accurate results than pure LSTM as well as being more resource efficient as LSTM is typically resource hungry\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "856b87b2-010d-423e-99c3-24e28eb6e1af",
    "metadata": {},
    "outputs": [],
@@ -227,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
