Added basics of error metrics for ARIMA model

--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -109,7 +109,58 @@
     "\n",
     "    # Train the model using model_fit = model.fit()\n",
     "    # Forecast the time series usin model_fit.forecast()\n",
-    "    # Analyze the model's performance by comparing the predicted values with actual values from the testing dataset"
+    "    # model_fit.forecast(steps=6)   #'steps' parameter for # of future steps to forecast\n",
+    "    # Analyze the model's performance by comparing the predicted values with actual values from the testing dataset\n",
+    "    # print(model_fit.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10cd1140",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a. Observe what the predictions look like\n",
+    "    # Predicted values:\n",
+    "    # y_pred = pd.Series(model.forecast(test_set_size)[0], index=df.value[sample_size].index)\n",
+    "    # Actual values:\n",
+    "    # y_true = df.value[sample_size]\n",
+    "\n",
+    "    # Print predictions\n",
+    "    # print(np.array(y_pred).astype(np.uint8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55f8190f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# b. Measure error of predictions using error metrics/functions popular for general regression models\n",
+    "    # Mean absolute error\n",
+    "    # mae = np.mean(np.abs(y_pred - y_true))\n",
+    "    \n",
+    "    # Mean absolute percentage error\n",
+    "    # mape = np.mean(np.abs(y_pred - y_true)/np.abs(y_true))\n",
+    "    \n",
+    "    # Mean percentage error\n",
+    "    # mpe = np.mean((y_pred - y_true)/y_true)\n",
+    "    \n",
+    "    # Root mean squared\n",
+    "    # rmse = np.mean((y_pred - y_true)**2)**.5\n",
+    "    \n",
+    "    # Correlation Coefficient\n",
+    "    # corr = np.corrcf(y_pred, y_true)[0, 1]\n",
+    "    \n",
+    "    \n",
+    "    # Mean absolute scaled error (better for time-series data)\n",
+    "    # n = np.array(df[sample_size]).shape[0]\n",
+    "    # d = np.abs(np.diff(np.array(df[sample_size].value))).sum()/(n-1)\n",
+    "    \n",
+    "    # errors = np.abs(y_true - y_pred)\n",
+    "    # print(errors.mean()/d)"
    ]
   }
  ],
@@ -129,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
