modified block to import data

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -22,9 +22,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2: Load the dataset from yahoo finance (yfinance)\n",
-    "# stock_data = yf.download('SYM', start='2022-01-01', end='2023-01-01')\n",
-    "    # 'SYM' is the symbol of the stock we are interested in downloading"
+    "# 2. Importing stock data using AlphaVantage API\n",
+    "\n",
+    "\n",
+    "#Install AlphaVantage and import libraries if not already imported\n",
+    "# !pip install alpha_vantage\n",
+    "# import pandas as pd\n",
+    "# import matplotlib.pyplot as plt\n",
+    "from alpha_vantage.timeseries import TimeSeries\n",
+    "\n",
+    "#Free API key\n",
+    "key = 'UO4WWNLT3XIKJ6EI'\n",
+    "\n",
+    "# Create TimeSeries object\n",
+    "ts = TimeSeries(key, output_format='pandas') #requires input of key and output format (default is json)\n",
+    "\n",
+    "# Sample API Call for Tesla\n",
+    "#objects come with a data and a meta component (will likely only need data component), require a stock symbol + interval + output size\n",
+    "data, meta = ts.get_intraday('TSLA', interval = '1min', outputsize='full')"
    ]
   },
   {
@@ -259,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
