--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -25,6 +25,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fa819972",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Importing stock data using AlphaVantage API\n",
+    "\n",
+    "\n",
+    "#Install AlphaVantage and import libraries if not already imported\n",
+    "# !pip install alpha_vantage\n",
+    "# import pandas as pd\n",
+    "# import matplotlib.pyplot as plt\n",
+    "from alpha_vantage.timeseries import TimeSeries\n",
+    "\n",
+    "#Free API key\n",
+    "key = 'UO4WWNLT3XIKJ6EI'\n",
+    "\n",
+    "# Create TimeSeries object\n",
+    "ts = TimeSeries(key, output_format='pandas') #requires input of key and output format (default is json)\n",
+    "\n",
+    "# Sample API Call for Tesla\n",
+    "#objects come with a data and a meta component (will likely only need data component), require a stock symbol + interval + output size\n",
+    "data, meta = ts.get_intraday('TSLA', interval = '1min', outputsize='full') \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f5c7e2ea",
    "metadata": {},
    "outputs": [],
@@ -180,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
